@@ -14,6 +14,7 @@ repeat "error reports" in the forums.
     FIXED - More PHP 5.3/5.4/strict related errors (split -> explode)
     CHANGE - if there are actually 0 maps in the database, the 'Weathermaps'
              tab gives some basic instructions.
+    ADDED - Special token formatting can handle timeticks and time_t formatting (%T and %t respectively)
 
 0.97c had no additional changes - it's just 0.97b with some silly errors fixed, and  all
 the CSS files included with the correct paths. There were also reports of problems with the
